# SEx

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
icons/: Licence.txt
snapshots/: test_collapse-wgpu.sha256  test_load_file-wgpu.sha256  test_load_tree-wgpu.sha256  test_removed-wgpu.sha256  test_scope-wgpu.sha256  test_select-wgpu.sha256  test_select_next-wgpu.sha256  test_select_previous-wgpu.sha256  test_vectorscope-wgpu.sha256  test_vu_meter_mono-wgpu.sha256  test_vu_meter_more_channels-wgpu.sha256  test_vu_meter_stereo-wgpu.sha256  test_waveform-wgpu.sha256  test_waveform_progressive-wgpu.sha256
src/: audio.rs  fft_processor.rs  file_explorer.rs  file_watcher.rs  icon_provider.rs  main.rs  scope.rs  search.rs  spectrum.rs  tuner.rs  ui.rs  vectorscope.rs  visualization.rs  vu_meter.rs  waveform.rs  waveform_async.rs
svg/: README.md
