[package]
name = "sex"
description = "Sample Explorer"
version = "0.1.0"
edition = "2021"

# Example of usage: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
apodize = "1.0.0"
async-std = "1.12.0"
fern = "0.7.1"
humantime = "2.2.0"
iced = { git = "https://github.com/iced-rs/iced", rev = "fd5ed0d0a6e84b3c036ff8e1f0d62d383d4b1e82", features = ["async-std", "svg", "image", "canvas"] }
itertools = "0.14.0"
log = "0.4.26"
mime = "0.3.17"
mime_guess = "2.0.5"
notify = "8.0.0"
rfd = "0.15.3"
rodio = { git = "https://github.com/RustAudio/rodio", rev = "64cf70b45b3097ca10ca72eccceaddbb937b24e2" }
rustfft = "6.2.0"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.24.0"
