[package]
name = "sex"
description = "Sample Explorer"
version = "0.1.0"
edition = "2021"

# Example of usage: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
apodize = "1.0.0"
fern = "0.7.1"
humantime = "2.2.0"
iced = { git = "https://github.com/iced-rs/iced", rev = "193a340d6de929ff62af634df35555e256eff116", features = ["tokio", "svg", "image", "canvas"] }
itertools = "0.14.0"
log = "0.4.27"
notify = "8.0.0"
pitch-detection = "0.3.0"
rfd = "0.15.3"
rodio = { git = "https://github.com/RustAudio/rodio", rev = "aa75313472ff4867a976cd345f78455971d422a2" }
rustfft = "6.3.0"
temp-dir-builder = "0.1.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["fs", "rt", "macros"] }

[dev-dependencies]
rstest = "0.25.0"
iced_test = { git = "https://github.com/iced-rs/iced", rev = "193a340d6de929ff62af634df35555e256eff116" }
